fix for alignment of numbers

--- a/src/main/resources/public/demogwt.css
+++ b/src/main/resources/public/demogwt.css
@@ -203,3 +203,7 @@ h1 {
 	width: 84px;
 	text-overflow: ellipsis;
 }
+
+.align-right {
+	text-align: right;
+}
